bugfixes and hoverable css done

--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,7 @@ body {
               color: #fff;
               text-align: center; }
             .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered .mail {
-              position: absolute;
-              left: 24px;
+              margin-left: 24px;
               text-align: center;
               display: inline; }
               .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered .mail p {
@@ -257,8 +256,7 @@ body {
                   display: inline;
                   font-size: 20px; }
             .swiper-container .swiper-slide .team-page .team-wrapper .andreas .andreas-hovered .phone {
-              position: absolute;
-              left: 40px;
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px; }
@@ -306,8 +304,7 @@ body {
               color: #fff;
               text-align: center; }
             .swiper-container .swiper-slide .team-page .team-wrapper .felix .felix-hovered .mail {
-              position: absolute;
-              left: 24px;
+              margin-left: 24px;
               text-align: center;
               display: inline; }
               .swiper-container .swiper-slide .team-page .team-wrapper .felix .felix-hovered .mail p {
@@ -322,8 +319,7 @@ body {
                   display: inline;
                   font-size: 20px; }
             .swiper-container .swiper-slide .team-page .team-wrapper .felix .felix-hovered .phone {
-              position: absolute;
-              left: 40px;
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px; }
@@ -371,8 +367,7 @@ body {
               color: #fff;
               text-align: center; }
             .swiper-container .swiper-slide .team-page .team-wrapper .stefan .stefan-hovered .mail {
-              position: absolute;
-              left: 24px;
+              margin-left: 24px;
               text-align: center;
               display: inline; }
               .swiper-container .swiper-slide .team-page .team-wrapper .stefan .stefan-hovered .mail p {
@@ -387,8 +382,7 @@ body {
                   display: inline;
                   font-size: 20px; }
             .swiper-container .swiper-slide .team-page .team-wrapper .stefan .stefan-hovered .phone {
-              position: absolute;
-              left: 40px;
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px; }
@@ -436,8 +430,7 @@ body {
               color: #fff;
               text-align: center; }
             .swiper-container .swiper-slide .team-page .team-wrapper .franziska .franziska-hovered .mail {
-              position: absolute;
-              left: 18px;
+              margin-left: 18px;
               text-align: center;
               display: inline; }
               .swiper-container .swiper-slide .team-page .team-wrapper .franziska .franziska-hovered .mail p {
@@ -452,8 +445,7 @@ body {
                   display: inline;
                   font-size: 20px; }
             .swiper-container .swiper-slide .team-page .team-wrapper .franziska .franziska-hovered .phone {
-              position: absolute;
-              left: 40px;
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px; }
@@ -501,8 +493,7 @@ body {
               color: #fff;
               text-align: center; }
             .swiper-container .swiper-slide .team-page .team-wrapper .silvia .silvia-hovered .mail {
-              position: absolute;
-              left: 18px;
+              margin-left: 18px;
               text-align: center;
               display: inline; }
               .swiper-container .swiper-slide .team-page .team-wrapper .silvia .silvia-hovered .mail p {
@@ -517,8 +508,7 @@ body {
                   display: inline;
                   font-size: 20px; }
             .swiper-container .swiper-slide .team-page .team-wrapper .silvia .silvia-hovered .phone {
-              position: absolute;
-              left: 40px;
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px; }
@@ -566,8 +556,7 @@ body {
               color: #fff;
               text-align: center; }
             .swiper-container .swiper-slide .team-page .team-wrapper .tanja .tanja-hovered .mail {
-              position: absolute;
-              left: 18px;
+              margin-left: 18px;
               text-align: center;
               display: inline; }
               .swiper-container .swiper-slide .team-page .team-wrapper .tanja .tanja-hovered .mail p {
@@ -582,8 +571,7 @@ body {
                   display: inline;
                   font-size: 20px; }
             .swiper-container .swiper-slide .team-page .team-wrapper .tanja .tanja-hovered .phone {
-              position: absolute;
-              left: 40px;
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px; }
