--- a/css/style.scss
+++ b/css/style.scss
@@ -296,19 +296,18 @@ body {
 
             }
 
-            .mail{
-              position: absolute;
-              left: 24px;
+            .mail {
+              margin-left: 24px;
               text-align: center;
               display: inline;
-              p{
+              p {
                 display: inline;
                 font-size: 15px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:5px;
+                  padding-right: 5px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -316,21 +315,20 @@ body {
               }
 
             }
-            .phone{
-              position: absolute;
-              left: 40px;
+            .phone {
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px;
 
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:2px;
+                  padding-right: 2px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -378,19 +376,18 @@ body {
 
             }
 
-            .mail{
-              position: absolute;
-              left: 24px;
+            .mail {
+              margin-left: 24px;
               text-align: center;
               display: inline;
-              p{
+              p {
                 display: inline;
                 font-size: 15px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:5px;
+                  padding-right: 5px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -398,21 +395,20 @@ body {
               }
 
             }
-            .phone{
-              position: absolute;
-              left: 40px;
+            .phone {
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px;
 
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:2px;
+                  padding-right: 2px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -424,7 +420,6 @@ body {
           &:hover .felix-hovered {
             opacity: 1;
           }
-
 
         }
         .stefan {
@@ -461,19 +456,18 @@ body {
 
             }
 
-            .mail{
-              position: absolute;
-              left: 24px;
+            .mail {
+              margin-left: 24px;
               text-align: center;
               display: inline;
-              p{
+              p {
                 display: inline;
                 font-size: 15px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:5px;
+                  padding-right: 5px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -481,21 +475,20 @@ body {
               }
 
             }
-            .phone{
-              position: absolute;
-              left: 40px;
+            .phone {
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px;
 
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:2px;
+                  padding-right: 2px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -507,8 +500,6 @@ body {
           &:hover .stefan-hovered {
             opacity: 1;
           }
-
-
 
         }
         .franziska {
@@ -545,19 +536,18 @@ body {
 
             }
 
-            .mail{
-              position: absolute;
-              left: 18px;
+            .mail {
+              margin-left: 18px;
               text-align: center;
               display: inline;
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:5px;
+                  padding-right: 5px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -565,21 +555,20 @@ body {
               }
 
             }
-            .phone{
-              position: absolute;
-              left: 40px;
+            .phone {
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px;
 
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:2px;
+                  padding-right: 2px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -627,19 +616,18 @@ body {
 
             }
 
-            .mail{
-              position: absolute;
-              left: 18px;
+            .mail {
+              margin-left: 18px;
               text-align: center;
               display: inline;
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:5px;
+                  padding-right: 5px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -647,21 +635,20 @@ body {
               }
 
             }
-            .phone{
-              position: absolute;
-              left: 40px;
+            .phone {
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px;
 
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:2px;
+                  padding-right: 2px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -673,7 +660,6 @@ body {
           &:hover .silvia-hovered {
             opacity: 1;
           }
-
 
         }
         .tanja {
@@ -710,19 +696,18 @@ body {
 
             }
 
-            .mail{
-              position: absolute;
-              left: 18px;
+            .mail {
+              margin-left: 18px;
               text-align: center;
               display: inline;
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:5px;
+                  padding-right: 5px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
@@ -730,21 +715,20 @@ body {
               }
 
             }
-            .phone{
-              position: absolute;
-              left: 40px;
+            .phone {
+              margin-left: 40px;
               text-align: center;
               display: inline;
               padding-top: 10px;
 
-              p{
+              p {
                 display: inline;
                 font-size: 13px;
                 color: #fff;
                 vertical-align: middle;
-                i{
+                i {
                   color: #fff;
-                  padding-right:2px;
+                  padding-right: 2px;
                   vertical-align: middle;
                   display: inline;
                   font-size: 20px;
