--- a/css/style.scss
+++ b/css/style.scss
@@ -78,7 +78,7 @@ body {
 
     .landing-page {
       height: 100%;
-      background-image: url("../assets/imgs/landing_background.JPG");
+      background-image: url("../assets/imgs/background_landing.JPG");
       background-size: cover;
       background-repeat: no-repeat;
       margin: 0;
@@ -86,8 +86,8 @@ body {
 
       .headline {
         position: absolute;
-        top: calc(100% - 85%);
-        left: calc(100% - 85%);
+        top: calc(100% - 77%);
+        left: calc(100% - 80%);
         img {
           height: 200px;
           width: 200px;
@@ -96,10 +96,13 @@ body {
         }
         h1 {
           color: #fff;
-          font-size: 50px;
+          font-size: 65px;
+
           display: inline-block;
           vertical-align: middle;
           padding: 10px;
+
+
 
         }
       }
@@ -120,7 +123,7 @@ body {
         }
         p {
           color: #fff;
-          font-size: 20px;
+          font-size: 30px;
           display: block;
           margin: -10px;
           padding: 0;
@@ -252,6 +255,8 @@ body {
       padding: 0;
       .team-wrapper {
         position: relative;
+        top: 10%;
+        left: 10%;
         .team {
           text-align: center;
           vertical-align: middle;
@@ -762,6 +767,11 @@ body {
 
 @media screen and (max-width:800px){
 
+.swiper-container .swiper-slide .landing-page .navigation-down{
+  position: absolute;
+  bottom: 0;
+  left: calc(100% - 62%);
+}
 .swiper-container .swiper-slide .landing-page{
   width: 100%;
   height: 100%;
@@ -792,6 +802,11 @@ margin-top: calc(100% - 55%);
 }
 
 @media screen and (max-width:700px){
+  .swiper-container .swiper-slide .landing-page .navigation-down{
+    position: absolute;
+    bottom: 0;
+    left: calc(100% - 64%);
+  }
 
 .swiper-container .swiper-slide .landing-page{
   width: 100%;
